# openmp_tasks

Task0/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  main.cpp
Task4/: CMakeLists.txt  main.cpp
Task5/: CMakeLists.txt  main.cpp
Tasks6-15/: CMakeLists.txt  Task10.cpp  Task10.h  Task11.cpp  Task11.h  Task12.cpp  Task12.h  Task13.cpp  Task13.h  Task14.cpp  Task14.h  Task15.cpp  Task15.h  Task6.cpp  Task6.h  Task7.cpp  Task7.h  Task8.cpp  Task8.h  Task9.cpp  Task9.h  main.cpp
