cmake_minimum_required(VERSION 3.12)
project(Task6-15)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS -fopenmp)

add_executable(Task6-15 main.cpp Task6.cpp Task6.h Task7.h Task7.cpp Task8.cpp Task8.h Task9.cpp Task9.h Task10.cpp Task10.h Task11.cpp Task11.h Task12.cpp Task12.h Task13.cpp Task13.h Task14.cpp Task14.h Task15.cpp Task15.h)